fix color theme, fix menu not centered

--- a/static/css/style.dev.css
+++ b/static/css/style.dev.css
@@ -1341,7 +1341,7 @@ body.ht-tm-neon-glow .ht-navbar-wrapper {
 
 @media (max-width: 767.98px) {
   .ht-tm-navbar {
-    padding: 10px 0;
+    padding: 10px 5px;
   }
 }
 
@@ -1414,7 +1414,7 @@ body.ht-tm-neon-glow .ht-navbar-wrapper {
   }
 
   .ht-tm-nav a {
-    padding: 5px 0;
+    padding: 5px 5px;
   }
 }
 
